--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,122 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --color-lightest: #c0e6f7;
+  --color-middle: #8ecae6;
+  --color-orange: #ffb703;
+  --color-orange_darker: #e4a403;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-shadow: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-lightest);
+}
+
+.splitter {
+  min-height: 66vh;
+  display: grid;
+  grid-template-columns: 38rem 44rem;
+  column-gap: 4rem;
+  align-items: start;
+}
+
+.btn {
+  background-color: var(--color-orange);
+  padding: 0.8rem 1.2rem;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  background-color: var(--color-orange_darker);
+}
+
+.sidebar ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+  font-size: 1.4rem;
+  margin-bottom: 2rem;
+}
+
+.sidebar li {
+  display: grid;
+  grid-template-columns: 4.2rem 1fr auto auto;
+  align-items: center;
+  column-gap: 1.6rem;
+  padding: 1.2rem;
+  border-radius: 8px;
+  transition: 0.3s;
+}
+
+.sidebar li:hover {
+  background-color: var(--color-middle);
+}
+
+.sidebar li img {
+  width: 100%;
+  border-radius: 50%;
+}
+
+.sidebar li h3 {
+  font-size: 2.4rem;
+}
+
+.sidebar li p {
+  font-size: 2rem;
+}
+
+.sidebar > div .btn {
+  float: right;
+  margin-right: 0.8rem;
+}
+
+form {
+  background-color: var(--color-middle);
+  border-radius: 8px;
+
+  font-size: 1.8rem;
+  display: grid;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+label {
+  font-weight: bold;
+}
+
+input {
+  font-family: inherit;
+  color: inherit;
+
+  padding: 0.7rem;
+  font-size: 1.8rem;
+  text-align: center;
+
+  border: 1px solid var(--color-lightest);
+  border-radius: 4px;
+}
+
+.form-add-friend {
+  grid-template-columns: 1fr 1.5fr;
+  padding: 1.2rem;
+  margin: 0.8rem;
 }
