--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,19 @@ body {
   background-color: var(--color-lightest);
 }
 
-.splitter {
-  min-height: 66vh;
+.app {
+  /* min-height: 66vh; */
   display: grid;
-  grid-template-columns: 38rem 44rem;
+  grid-template-columns: 38rem 15rem;
   column-gap: 4rem;
   align-items: start;
+}
+
+.app h1 {
+  grid-column: span 2;
+  height: 6rem;
+  font-size: 4.2rem;
+  text-align: center;
 }
 
 .btn {
@@ -48,7 +55,13 @@ body {
   background-color: var(--color-orange_darker);
 }
 
-.sidebar ul {
+form > .btn {
+  margin-top: 0.6rem;
+  grid-column: 2;
+}
+
+.sidebar ul,
+.result ul {
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -67,6 +80,17 @@ body {
   transition: 0.3s;
 }
 
+.result li {
+  display: flex;
+  justify-content: space-between;
+}
+
+.result li {
+  padding: 1.7rem;
+  padding-left: 0;
+}
+
+.selected,
 .sidebar li:hover {
   background-color: var(--color-middle);
 }
@@ -76,17 +100,27 @@ body {
   border-radius: 50%;
 }
 
-.sidebar li h3 {
+.sidebar li h3,
+.result li h3 {
   font-size: 2.4rem;
 }
 
-.sidebar li p {
-  font-size: 2rem;
+.sidebar li p,
+.result li p {
+  font-size: 2.4rem;
 }
 
 .sidebar > div .btn {
   float: right;
-  margin-right: 0.8rem;
+  margin-right: 1.2rem;
+}
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
 }
 
 form {
@@ -118,5 +152,23 @@ input {
 .form-add-friend {
   grid-template-columns: 1fr 1.5fr;
   padding: 1.2rem;
-  margin: 0.8rem;
+  margin-bottom: 0.8rem;
+}
+
+.splitter {
+  grid-column: 2;
+  /* border: 2px solid var(--color-middle); */
+  box-shadow: 0px 0px 40px 0px var(--color-middle);
+}
+
+.splitter-header {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.result {
+  grid-column: 2;
 }
