--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
 .app {
   /* min-height: 33vh; */
   display: grid;
-  grid-template-columns: 35rem 15rem;
+  grid-template-columns: 40rem 15rem;
   column-gap: 3rem;
   align-items: start;
 }
@@ -36,7 +36,7 @@ body {
 .app h1 {
   grid-column: span 2;
   height: 6rem;
-  font-size: 4.2rem;
+  font-size: 4.8rem;
   text-align: center;
   margin-bottom: 6rem;
 }
@@ -57,6 +57,7 @@ body {
   cursor: pointer;
   text-transform: uppercase;
   transition: 0.3s;
+  transition-property: background-color;
 }
 
 .btn:hover {
@@ -66,6 +67,21 @@ body {
 form > .btn {
   margin-top: 0.6rem;
   grid-column: 2;
+}
+
+.btn-delete {
+  color: rgb(255, 174, 174);
+  font-size: 2.4rem;
+  font-weight: bold;
+  border: none;
+  background-color: var(--color-lightest);
+  transition: 0.3s;
+}
+
+.btn-welcome {
+  /* margin-right: 3rem !important; */
+  padding: 1.8rem 2.7rem;
+  font-size: 2.2rem;
 }
 
 .sidebar ul,
@@ -78,7 +94,14 @@ form > .btn {
   margin-bottom: 2rem;
 }
 
+.sidebar .friend-row {
+  display: grid;
+  grid-template-columns: 24px auto;
+  column-gap: 4px;
+}
+
 .sidebar li {
+  flex-grow: 1;
   display: grid;
   grid-template-columns: 4.2rem 1fr auto auto;
   align-items: center;
@@ -91,9 +114,6 @@ form > .btn {
 .result li {
   display: grid;
   grid-template-columns: 8rem auto 1.2rem;
-}
-
-.result li {
   padding: 1.7rem;
   padding-left: 0;
 }
@@ -134,7 +154,8 @@ form > .btn {
   margin-right: 1.2rem;
 }
 
-.red {
+.red,
+.btn-delete:hover {
   color: red;
 }
 
@@ -150,6 +171,7 @@ form {
   display: grid;
   align-items: center;
   gap: 1.2rem;
+  margin-left: 22px;
 }
 
 label {
