--- a/src/index.css
+++ b/src/index.css
@@ -27,14 +27,9 @@ body {
 
 .app {
   min-height: 37vh;
-  display: grid;
-  grid-template-columns: 40rem 15rem;
-  column-gap: 3rem;
-  align-items: start;
 }
 
 .app h1 {
-  grid-column: span 2;
   height: 6rem;
   font-size: 4.8rem;
   text-align: center;
@@ -42,7 +37,6 @@ body {
 }
 
 .app h2 {
-  grid-column: span 2;
   height: 6rem;
   font-size: 2.8rem;
   text-align: center;
@@ -64,8 +58,14 @@ body {
   background-color: var(--color-orange_darker);
 }
 
+.sidebar > div .btn {
+  /* float: right; */
+  margin-left: 4rem;
+}
+
 form > .btn {
   margin-top: 0.6rem;
+  margin-right: 0 !important;
   grid-column: 2;
 }
 
@@ -76,16 +76,17 @@ form > .btn {
   border: none;
   background-color: var(--color-lightest);
   transition: 0.3s;
+  margin-right: 0.8rem;
 }
 
 .btn-welcome {
   /* margin-right: 3rem !important; */
-  padding: 1.8rem 2.7rem;
-  font-size: 2.2rem;
+  padding: 2rem 4rem;
+  font-size: 2rem;
+  margin-left: 7rem !important;
 }
 
-.sidebar ul,
-.result ul {
+.sidebar ul {
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -94,34 +95,25 @@ form > .btn {
   margin-bottom: 2rem;
 }
 
-.sidebar .friend-row {
+/* .friend-row {
+  display: flex;
+  flex-wrap: wrap;
+} */
+
+.friend-row {
   display: grid;
-  grid-template-columns: 24px auto;
-  column-gap: 4px;
+  grid-template-columns: auto auto auto;
+  /* grid-template-rows: 1fr 1fr; */
 }
 
 .sidebar li {
-  flex-grow: 1;
   display: grid;
-  grid-template-columns: 4.2rem 1fr auto auto;
+  grid-template-columns: 4.2rem 12rem 7rem 7rem;
   align-items: center;
   column-gap: 1.6rem;
   padding: 1.2rem;
   border-radius: 8px;
   transition: 0.3s;
-}
-
-.result li {
-  display: grid;
-  grid-template-columns: 8rem auto 1.2rem;
-  padding: 1.7rem;
-  padding-left: 0;
-}
-
-.result span {
-  font-size: 2.4rem;
-  font-weight: bold;
-  text-align: right;
 }
 
 .selected,
@@ -134,24 +126,13 @@ form > .btn {
   border-radius: 50%;
 }
 
-.sidebar li h3,
-.result li h3 {
+.sidebar li h3 {
   font-size: 2.4rem;
 }
 
-.sidebar li p,
-.result li p {
+.sidebar li p {
   font-size: 2.4rem;
-}
-
-.result li p {
   text-align: right;
-  font-weight: bold;
-}
-
-.sidebar > div .btn {
-  float: right;
-  margin-right: 1.2rem;
 }
 
 .red,
@@ -168,10 +149,12 @@ form {
   border-radius: 8px;
 
   font-size: 1.8rem;
+
   display: grid;
   align-items: center;
   gap: 1.2rem;
-  margin-left: 22px;
+  width: 34.8rem;
+  margin-left: 2.6rem;
 }
 
 label {
@@ -196,20 +179,37 @@ input {
   margin-bottom: 0.8rem;
 }
 
-.splitter {
-  grid-column: 2;
-  /* border: 2px solid var(--color-middle); */
-  box-shadow: 0px 0px 40px 0px var(--color-middle);
-}
-
-.splitter-header {
-  display: flex;
-  flex-direction: column;
-  gap: 0.8rem;
-  justify-content: center;
-  align-items: center;
-}
-
 .result {
-  grid-column: 2;
+  display: grid;
+  grid-template-columns: 8.4rem auto;
+
+  font-size: 2.4rem;
+  font-weight: bold;
+  text-align: left;
+  align-content: center;
+  margin-left: 0.8rem;
+}
+
+/************************/
+/**BELOW 44.5*16 = 712px (smaller tablets)**/
+/************************/
+@media (max-width: 44.5em) {
+  .app {
+    /* min-width: 0; */
+  }
+
+  .sidebar ul {
+    row-gap: 2.6rem;
+  }
+
+  .result {
+    grid-row: 2;
+    grid-column: 2;
+    margin-left: 7rem;
+  }
+
+  .btn {
+    padding: 1.2rem 1.8rem;
+    font-size: 1.6rem;
+  }
 }
