--- a/src/index.css
+++ b/src/index.css
@@ -195,7 +195,7 @@ input {
 /************************/
 @media (max-width: 44.5em) {
   .app {
-    /* min-width: 0; */
+    min-height: 37vh;
   }
 
   .sidebar ul {
