--- a/src/index.css
+++ b/src/index.css
@@ -29,17 +29,30 @@ body {
   min-height: 37vh;
 }
 
+.main-header {
+  display: flex;
+  flex-direction: column;
+  gap: 8rem;
+  margin: 0 2rem 4rem 2rem;
+}
+
 .app h1 {
-  height: 6rem;
+  /* height: 6rem; */
   font-size: 4.8rem;
   text-align: center;
-  margin-bottom: 6rem;
+  /* margin-bottom: 6rem; */
 }
 
 .app h2 {
   height: 6rem;
   font-size: 2.8rem;
   text-align: center;
+}
+
+.test {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn {
@@ -71,19 +84,18 @@ form > .btn {
 
 .btn-delete {
   color: rgb(255, 174, 174);
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: bold;
   border: none;
   background-color: var(--color-lightest);
   transition: 0.3s;
-  margin-right: 0.8rem;
+  margin-left: 2rem;
 }
 
 .btn-welcome {
-  /* margin-right: 3rem !important; */
   padding: 2rem 4rem;
+  margin: 0 !important;
   font-size: 2rem;
-  margin-left: 7rem !important;
 }
 
 .sidebar ul {
@@ -108,12 +120,13 @@ form > .btn {
 
 .sidebar li {
   display: grid;
-  grid-template-columns: 4.2rem 12rem 7rem 7rem;
+  grid-template-columns: 4.2rem 7rem 7rem 7rem;
   align-items: center;
   column-gap: 1.6rem;
   padding: 1.2rem;
   border-radius: 8px;
   transition: 0.3s;
+  margin-right: 2rem;
 }
 
 .selected,
@@ -181,7 +194,7 @@ input {
 
 .result {
   display: grid;
-  grid-template-columns: 8.4rem auto;
+  grid-template-columns: 8.4rem 7rem 4rem;
 
   font-size: 2.4rem;
   font-weight: bold;
@@ -214,9 +227,17 @@ input {
   }
 
   .btn-welcome {
-    /* margin-right: 3rem !important; */
     padding: 2rem 4rem;
     font-size: 2rem;
-    margin-left: 7rem !important;
+    margin: 0 !important;
+  }
+}
+
+/************************/
+/**BELOW 35*16 = 560px (Phones)**/
+/************************/
+@media (max-width: 35em) {
+  .sidebar li {
+    column-gap: 1.2rem;
   }
 }
