--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: var(--color-lightest);
-  margin: 12rem 0 12rem 0;
+  margin: 0 0 12rem 0;
 }
 
 .app {
